finished with home and about us

--- a/app/views/static_pages/about_us.html.erb
+++ b/app/views/static_pages/about_us.html.erb
@@ -1,2 +1,5 @@
-<h1>StaticPages#about_us</h1>
-<p>Find me in app/views/static_pages/about_us.html.erb</p>
+<% provide(:title, "About Us") %>
+<h1>Help</h1>
+<p>
+   Just so much to say about these people.
+</p>
