--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,2 +1,5 @@
-<h1>StaticPages#index</h1>
-<p>Find me in app/views/static_pages/index.html.erb</p>
+<% provide(:title, "Home") %>
+<h1>Guild App</h1>
+<p>
+  This is the home page for the as one of our old guildies said: The guild "That only cares about it raiders"
+</p>
