--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, "Home") %>
+<div class="center jumbotron">
 <h1>Guild App</h1>
 <p>
-  This is the home page for the as one of our old guildies said: The guild "That only cares about it raiders"
+  This is the home page for, as one of our old guildies said, "[The guild] that only cares about it's raiders".
 </p>
