got a good start on the layout

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,12 +1,12 @@
 <footer class="footer">
   <small>
-    The <a href="http://us.battle.net/wow/en/guild/chogall/Hard_Classes_R_Us/roster?sort=rank&dir=a">Hard Classes R Us Site</a>
+    <a href="http://us.battle.net/wow/en/guild/chogall/Hard_Classes_R_Us/roster?sort=rank&dir=a">Hard Classes R Us</a>
     by <a href="http://us.battle.net/wow/en/character/chogall/P%C3%B5l%C3%A9/simple">toofattswim</a>
   </small>
   <nav>
     <ul>
-      <li><%= link_to "About",   'about_path' %></li>
-      <li><%= link_to "Contact", 'contact_path' %></li>
+      <li><%= link_to "About",   about_path %></li>
+      <li><%= link_to "Contact", contact_path %></li>
       <li><a href="http://blizzardwatch.com/">News</a></li>
     </ul>
   </nav>
