--- a/app/views/static_pages/about_us.html.erb
+++ b/app/views/static_pages/about_us.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, "About Us") %>
-<h1>Help</h1>
+<div class="center jumbotron">
+<h1>Who are the Members</h1>
 <p>
    Just so much to say about these people.
 </p>
