--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,14 @@
 <footer class="footer">
   <small>
-    <a href="http://us.battle.net/wow/en/guild/chogall/Hard_Classes_R_Us/roster?sort=rank&dir=a">Hard Classes R Us</a>
-    by <a href="http://us.battle.net/wow/en/character/chogall/P%C3%B5l%C3%A9/simple">toofattswim</a>
+    <a href="http://us.battle.net/wow/en/guild/chogall/Hard_Classes_R_Us/roster?sort=rank&dir=a" target="_blank" >Hard Classes R Us</a>
+    by 
+     <a href="http://us.battle.net/wow/en/character/chogall/P%C3%B5l%C3%A9/simple" target="_blank" >toofattswim</a>
   </small>
   <nav>
     <ul>
       <li><%= link_to "About",   about_path %></li>
       <li><%= link_to "Contact", contact_path %></li>
-      <li><a href="http://blizzardwatch.com/">News</a></li>
+      <li><a href="http://blizzardwatch.com/" target="_blank">News</a></li>
     </ul>
   </nav>
 </footer>
