2/26 just random stuff added

--- a/app/assets/stylesheets/app_wide.css.scss
+++ b/app/assets/stylesheets/app_wide.css.scss
@@ -14,6 +14,15 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
+#warlords_video {
+position: absolute;
+top: 34px;
+left: -20px;
+bottom: 0px;
+width: 1920px;
+height: 1000px;
+opacity: 1;
+}
 body {
   margin: 0;
 }
