--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,14 @@
 <footer class="footer">
-  <small>
+
+  <nav>
+       <span class="nav navbar-fixed-bottom navbar-left" >
+        <small>
     <a href="http://us.battle.net/wow/en/guild/chogall/Hard_Classes_R_Us/roster?sort=rank&dir=a" target="_blank" >Hard Classes R Us</a>
     by 
      <a href="http://us.battle.net/wow/en/character/chogall/P%C3%B5l%C3%A9/simple" target="_blank" >toofattswim</a>
-  </small>
-  <nav>
-    <ul>
+            </small>
+      </span>
+   <ul class="nav navbar-nav navbar-right">
       <li><%= link_to "About",   about_path %></li>
       <li><%= link_to "Contact", contact_path %></li>
       <li><a href="http://blizzardwatch.com/" target="_blank">News</a></li>
