--- a/app/views/static_pages/about_us.html.erb
+++ b/app/views/static_pages/about_us.html.erb
@@ -2,5 +2,14 @@
 <div class="center jumbotron">
 <h1>Who are the Members</h1>
 <p>
-   Just so much to say about these people.
+    Just so much to say about these people.
+   <p>
+       As "Guild Lead" we have <a href="http://us.battle.net/wow/en/character/chogall/P%C3%B5l%C3%A9/simple" target="_blank" >Põlé</a>. He is lead by title     only, basically he does most of the guild admin work.  He is being forced to run as demo spec when he raids.
+    </p>
+    <p>
+        Then we have our co-"Guild Lead": <a href="http://us.battle.net/wow/en/character/chogall/Aenima/simple" target="_blank" >Aenima</a>.  Runs as a ret pally when he raids.
+    </p>
+    <p>
+        Lastly we have our raid lead, you must have of heard of him: <a href="http://us.battle.net/wow/en/character/chogall/Str%C3%BFgwyr/simple"             target="_blank">Strÿgwyr</a>.  He normally runs as a tank, in his nightly raids that start between 9-11 nightly.
+    </p>
 </p>
