--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,5 +1,8 @@
 <div class="center jumbotron">
 <h1>Guild App</h1>
+<h3>
+  This is the home page for, as one of our old guildies said, <strong>"[The guild] that only cares about it's raiders"</strong>. 
+</h3>
 <p>
-  This is the home page for, as one of our old guildies said, "[The guild] that only cares about it's raiders".
+    However, the "guild" broke up and now only a few raiders have stuck around and our raid lead pugs and will bring the guild members that want to raid that night.  
 </p>
