--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,12 @@
 
 <body>
 
-</video>
+    
      <%= render 'layouts/header' %>
     <div class="container">
+     <% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %>"><%= message %></div>
+      <% end %>
       <%= yield %>
         <%= render 'layouts/footer' %>
     </div>
