Final commit before midterm

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
              <%= link_to image_tag("murlock_thumb.png", alt: "Guild logo"), root_path, id: "logo" %>
           <ul class="nav navbar-nav navbar-right">
               <li><%= link_to "Home",   root_path %></li>
-            <li><%= link_to "Log in", signup_path %></li>
+            <li><%= link_to "Log in/Sign-up", signup_path %></li>
           </ul>
         </nav>
       </div>
