--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
     <title><%= full_title(yield(:title)) %></title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+        <!--for the wowhead news-->  
+    <script type="text/javascript" src="http://static.wowhead.com/widgets/newsfeed.js"></script>
   <%= csrf_meta_tags %>
   <%= favicon_link_tag 'murlock_tab.png' %>
   <%= render 'layouts/shim' %>
