--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,6 +4,7 @@
     <%= link_to image_tag("murlock_thumb.png", alt: "Guild logo"), root_path %>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home", root_path %></li>
+        <li><%= link_to 'Forums', "/forem" %><li>
         <% if logged_in? %>
         <li><%= link_to "Users", users_path %></li>
           <li class="dropdown">
